--- a/admin/css/qpay.css
+++ b/admin/css/qpay.css
@@ -1,4 +1,5 @@
-.jconfirm.jconfirm-white .jconfirm-box, .jconfirm.jconfirm-light .jconfirm-box {
+.jconfirm.jconfirm-white .jconfirm-box,
+.jconfirm.jconfirm-light .jconfirm-box {
   border-radius: 15px;
   padding: 30 30px 0 30px;
 }
